@@ -85,6 +85,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Safe-run/container evidence verification now treats `*_receipt.json` artifacts as presence-only evidence links (not raw file-digest comparisons), removing false `SAFE_RUN_EVIDENCE_DIGEST_MISMATCH` warnings in nominal flows.
 - Safe-run/container no longer silently swallow library view update failures after finalize; failures are now surfaced with explicit deterministic reason codes while preserving completed run artifacts.
 - `verify:360` now enforces a stage-residue gate (`stage_residue` step), failing closed with `VERIFY360_STAGE_RESIDUE_PRESENT` when `.stage` artifacts remain in deterministic run outputs.
+- `verify:360` stage-residue checks now always execute after deterministic lane attempts (including dependency-missing and pair-failure paths) and now scan the full temporary verify workspace so sibling `<out>.stage` roots are detected.
 - `verify:360:harness` now asserts `stage_residue` step presence in verify reports across pass/partial/fail lanes.
 - Ticket-pack contract tests now pin report-state parsing from `report_card_v0.json` and enforce digest-line format (`sha256:<64hex>`) for ticket summary identity fields.
 - Ticket-pack contract tests now also pin text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` and key-value lines) when structured report JSON is absent.
